--- a/config.toml
+++ b/config.toml
@@ -27,12 +27,12 @@ enableGitInfo = true
     # Fold/Unfold code blocks, default `false`, and
     # if `true` ，all code blocks will be folded when page load.
     # It will be always true in Mobile view no matter what's your setting.
-    hasFoldAllCodeBlocks = false
+    hasFoldAllCodeBlocks = true
 
     # active english view, default chinese
     en = false
 
-    slogan = '天行健，君子以自强不息；地势坤，君子以厚德载物.'        # your site slogan below title
+    slogan = '大道至简'        # your site slogan below title
 
     # like the following items that you need create a relative markdown file
     # Search - search.md
@@ -42,12 +42,42 @@ enableGitInfo = true
     # Idea posts/idea.md 
     # Wiki - posts/wiki.md
     [params.menu]
-        search = true
-        nav = false
-        archive = true
-        idea = true
-        wiki = true
-        about = true
+        [params.menu.00]
+            active = false
+            path = '/nav'
+            en = 'Nav'
+            zh = '导航'
+            icon = '🎯'
+        [params.menu.11]
+            active = true
+            path = '/search'
+            en = 'Search'
+            zh = '搜索'
+            icon = '🔎'
+        [params.menu.22]
+            active = true
+            path = '/posts'
+            en = 'Posts'
+            zh = '文章'
+            icon = '📜'
+        [params.menu.33]
+            active = true
+            path = '/archive'
+            en = 'Archive'
+            zh = '归档'
+            icon = '🎉'
+        [params.menu.44]
+            active = true	
+            path = '/wiki'
+            en = 'Wiki'
+            zh = '百科'
+            icon = '🚀'
+        [params.menu.55]
+            active = true
+            path = '/about'
+            en = 'About'
+            zh = '关于'
+            icon = '🐌'
 
     [params.svg]
         color = '#6c757d'                   # icon color of breadcrumb '#666'  # '#5a29e4' 
