--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ enableGitInfo = true
     # active english view, default chinese
     en = false
 
-    slogan = '大道至简'        # your site slogan below title
+    slogan = '☯大道至简'        # your site slogan below title
 
     # like the following items that you need create a relative markdown file
     # Search - search.md
@@ -91,7 +91,7 @@ enableGitInfo = true
         # and if not want to show img but some words, just 
         # comment `src = 'xxx'`, and input your words:
         #words = "Stay hungry, Stay foolish. Your time is limited, so don't waste it living someone else's life. Have the courage to follow your heart and intuition. They somehow already know what you truly want to become. Everything else is secondary. -- Steve Jobs."
-        words = "乾为天，坤为地，水雷屯，山水蒙；<br/>水天需，天水讼，地水师，水地比；风天小畜，天泽履，地天泰，天地否；天火同人，火天大有，地山谦，雷地豫；泽雷随，山风蛊，地泽临，风地观；火雷噬嗑，山火贲，山地剥，地雷复；天雷无妄，山天大畜，山雷颐，泽风大过；坎为水，离为火，泽山咸，雷风恒；天山遁，雷天大壮，火地晋，地火明夷；风火家人，火泽睽，水山蹇，雷水解；山泽损，风雷益，泽天夬，天风姤；泽地萃，地风升，泽水困，水风井；泽火革，火风鼎，震为雷，艮为山；风山渐，雷泽归妹，雷火丰，火山旅；巽为风，兑为泽，风水涣，水泽节；风泽中孚，雷山小过，水火既济，火水未济"
+        words = ""
 
     [params.contact]
         icp = '天行健，君子以自强不息；地势坤，君子以厚德载物'          # beian number
